inline todo notes replaced with another definition

--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -87,7 +87,7 @@ Dabei war schnell ersichtlich, dass Trimethylaluminium (TMA) von der Liu- sowie 
 Die Methylgruppen binden nicht mit dem zentralen Aluminium-Atom, so dass sie sich von diesem mit fortlaufender Simulationszeit linear entfernen.
 Einzig mittels des bereits ausgeschlossenen Al\_AlO\_AlN-Parametersatzes lassen sich stabile TMA-Moleküle simulieren.
 
-\todo[inline]{Bilder im Anhang}
+\todoline{Bilder im Anhang}
 
 Simulationen von Wassermolekülen sind hingegen mit allen Parametrisierungen geglückt, doch wurden keine umfangreicheren Untersuchungen etwa hinsichtlich der Phasenübergänge angestellt.
 Anhand des Al\_AlO\_AlN-Parametersatzes wurden auch Reaktionen zwischen TMA und Wasser simuliert, wie sie beispielsweise bei Vermischung der Precursorgase im ALD-Reaktor auftreten können, aber \todo{phrasing}leider ohne Erfolg.
@@ -139,5 +139,5 @@ Eine repulsive Kraft zwischen den Wassermolekülen und der Oberfläche verhinder
 Das deutet darauf hin, dass Hydroxylgruppen auf einer Aluminiumoxid-Oberfläche energetisch nicht bevorzugt werden oder die Reaktion mit einer hohen Reaktionsbarriere verbunden ist.
 Zusammen mit dem Problem, Trimethylaluminium nicht darstellen zu können, ist dieser Parametersatz somit nicht in der Lage, den ALD-Prozess darzustellen.
 
-\todo[inline]{Hinweis auf vollständige ALD-Simulationen?}
-\todo[inline]{Welche der alten Ergebnisse finden hier Anwendung?}
+\todoline{Hinweis auf vollständige ALD-Simulationen?}
+\todoline{Welche der alten Ergebnisse finden hier Anwendung?}
