--- a/appendix_alumina.tex
+++ b/appendix_alumina.tex
@@ -3,10 +3,10 @@
 
 \section{Simulationen von Trimethylaluminium}
 
-\todo[inline]{TMA-Simulationen}
+\todoline{TMA-Simulationen}
 
 \section{Wasser-\ce{Al2O3}-Reaktionen}
 
-\todo[inline]{Bedeckungszahlen}
-\todo[inline]{Ergebnis von 02\_water\_surface}
+\todoline{Bedeckungszahlen}
+\todoline{Ergebnis von 02\_water\_surface}
 
