--- a/appendix_datastructures.tex
+++ b/appendix_datastructures.tex
@@ -125,7 +125,7 @@ Abschnitt~\ref{datadelaunay} stellt Delaunay-Triangulationen vor, welche durch B
 
 \subsection{Algorithmen zur Konstruktion einer Delaunay-Triangulation}
 
-\todo[inline]{subsubsections statt itemize}
+\todoline{subsubsections statt itemize}
 
 Zur Delaunay-Triangulierung aus einer Punktmenge stehen verschiedene Algorithmen zur Verfügung, die auf unterschiedlichen Methoden aufbauen.
 \\\\
@@ -187,5 +187,5 @@ Dieser Algorithmus ist von rein akademischem Interesse, wird aber ebenfalls bei 
     %% Diese Operation läuft in \BigO{k_d\log{k_d}} Prüfungen bei Aktualisierung der Punkte eines Simplexes, mit $k_d$ als oberer Schranke der Zahl der Simplexe eines Punktes.
   }
   \label{fig:delaunay-flip}
-  \todo[inline]{Flip-Algorithmus: Lässt sich nicht mit dem Multifunktionsdrucker drucken}
+  \todoline{Flip-Algorithmus: Lässt sich nicht mit dem Multifunktionsdrucker drucken}
 \end{figure}
