--- a/bibliography.tex
+++ b/bibliography.tex
@@ -28,4 +28,4 @@
 \newcommand{\bblpages}{S.}
 
 \bibliography{literature} %standard
-\todo[inline]{Literaturverzeichnis muss noch überarbeitet werden}
+\todoline{Literaturverzeichnis muss noch überarbeitet werden}
