--- a/contents.tex
+++ b/contents.tex
@@ -7,7 +7,7 @@
 
 %\pdfbookmark{Inhaltsverzeichnis}{Inhaltsverzeichnis}
 \tableofcontents
-\todo[inline]{Überschriften überarbeiten}
+\todoline{Überschriften überarbeiten}
 
 %%======================================================================
 %%      Abbildungsverzeichnis
@@ -111,7 +111,7 @@ FEM       & Finite Element Method               & Finite-Elemente-Methoden      
   MOSFETs
 \end{comment}
 
-\todo[inline]{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
+\todoline{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
 
 \chapter*{Symbolverzeichnis}
 \addcontentsline{toc}{chapter}{Symbolverzeichnis}
