--- a/depositions.tex
+++ b/depositions.tex
@@ -1,7 +1,7 @@
 \section{Gasphasenabscheidungen}
 \label{depositions}
 
-\todo[inline]{Anmerkung von Jörg: Mehr Referenzen zu den Prozessen, spätestens bei ALD}
+\todoline{Anmerkung von Jörg: Mehr Referenzen zu den Prozessen, spätestens bei ALD}
 
 Gasphasenabscheidungen sind Herstellungsverfahren, bei denen durch physikalische oder chemische Prozesse aus einer Gasphase eine dünne Schicht auf einer Oberfläche aufgewachsen wird.
 Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition), die im folgenden vorgestellt werden.
@@ -113,7 +113,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
     & \\
     \end{tabularx}
     \begin{tablenotes}
-    \item[a] Metall-ALD ist zwar möglich, aber mit vielen Hürden verbunden.\todo[inline]{sinnvoller Satz!}
+    \item[a] Metall-ALD ist zwar möglich, aber mit vielen Hürden verbunden.\todoline{sinnvoller Satz!}
     \end{tablenotes}
   \end{threeparttable}
 \end{table}
@@ -139,7 +139,7 @@ Auch eine physikalische Adsorption der Nebenprodukte auf der Oberfläche kann de
 Dabei sind stets die Prozesstemperaturen, -drücke, Reaktionsbarrieren und die Stabilität aller involvierten Moleküle zu beachten, wodurch auch \todo{Anmerkung von Jörg: das gilt an sich für alle Abscheideprozesse}alle chemischen Gasphasenabscheidungsprozesse oft in monatelanger Arbeit optimiert werden müssen.
 Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollieren, was hinsichtlich einer gegenüber ALD vergleichsweise hohen \todo{ref}Wachstumsrate für viele Anwendungen ausreichend ist.
 
-\todo[inline]{Abbildung Beispiel Precursor-Moleküle}
+\todoline{Abbildung Beispiel Precursor-Moleküle}
 \missingfigure{Beispiel Precursor-Moleküle}
 
 \subsection{Atomlagenabscheidung}
@@ -195,7 +195,7 @@ Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Prec
   \end{tabularx}
 \end{table}
 
-\todo[inline]{fig:methodscales}
+\todoline{fig:methodscales}
 \missingfigure{fig:methodscales}
 
 Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations})\todo{fig:methodscales}.
@@ -203,4 +203,4 @@ Jede dieser Methoden basiert auf anderen Annahmen und Formulierungen, so dass si
 So können CFD-Reaktorsimulationen den Gasverbrauch an charakteristischen Punkten der Oberfläche durch KMC-Simulationen ermitteln, welche wiederum auf DFT-Daten für Reaktionsraten und -energien zurück greift.
 \todo{Detail, warum drauf verzichtet wird}Bisherige Simulationen verzichten meist auf eine strukturelle Betrachtungen der abgeschiedenen Schicht, wie sie etwa mit molekulardynamischen Rechnungen möglich werden.
 Gerade für Anwendungen in der Nanoelektronik sind die strukturellen Eigenschaften der Schichten aber eng mit der benötigten Funktion (mechanische und elektronische Eigenschaften) verknüpft, so dass eine Vorhersage der strukturellen Eigenschaften durch Simulationen wünschenswert ist.
-\todo[inline]{begreiflich machen, dass sich aus der Struktur auch elektronische und thermodynamische Eigenschaften}
+\todoline{begreiflich machen, dass sich aus der Struktur auch elektronische und thermodynamische Eigenschaften}
