--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -33,7 +33,7 @@ Die Parametrisierung repräsentiert somit das Zielsystem in Dichte und Struktur.
   \end{tabularx}
 \end{table}
 
-%% \todo[inline]{Oberflächenvalidierung}
+%% \todoline{Oberflächenvalidierung}
 
 \subsection{Thermodynamische Eigenschaften}
 \label{goldthermo}
@@ -173,7 +173,7 @@ Alle untersuchten Gold-Schichten wachsen epitaktisch senkrecht zur Kristallebene
 Für diese wird die Oberfläche und damit mögliche Ereignisorte parallel zur z-Achse gesucht, anstatt sie rechenaufwendig über die Alpha-Form aus einer Delaunay-Triangulation der Atompositionen zu bestimmen, wie es bereits zur Auswertung der simulierten Strukturen durchgeführt wird.
 Somit werden höher gelegene Ereignisorte in der direkten Nachbarschaft bevorzugt, was sich in der Verstärkung von Überhängen bei strukturierten Substraten mit hohen Neigungswinkeln zeigt (Abbildung~\ref{fig:goldpockets-b}).
 Als Lösung bieten sich die eben genannten Alpha-Formen (Abschnitt~\ref{datadelaunay}) an, welche allerdings noch keinen Einzug in das Parsivald-Programm gefunden haben.
-\todo[inline]{Sie sind allerdings für die verlässliche Simulation von ALD- und CVD-Prozessen notwendig.}
+\todoline{Sie sind allerdings für die verlässliche Simulation von ALD- und CVD-Prozessen notwendig.}
 
 Bei der Analyse der simulierten Strukturen wurde bei Abscheidungen auf glatten Substraten eine Rauheit von \SI{0.12}{\nano\meter} ermittelt, welche nur ca. \SI{10}{\percent} der experimentellen Werte beziehungsweise einer Lage von Goldatomen entspricht.
 Strukturierte Substrate zeigen hier höhere Rauheiten, die zwar den experimentell bestimmten Rauheiten entsprechen (Abbildung~\ref{fig:goldroughness}), aber ebenfalls keine Nanopartikel enthalten, sondern aus epitaktisch gewachsenen, monokristallinen Schichten bestehen.
@@ -268,5 +268,5 @@ Bei Oberflächen von \SI{2x2}{\micro\meter} Größe wären in dichtester Packung
 Dennoch liegt die Zahl der verfügbaren Prozessorkerne um Größenordnungen unterhalb des optimalen Wertes, was sich in entsprechend langen Simulationslaufzeiten äußert (\SI{186.8}{\hour} für \SI{1.0}{\angstrom} Schichthöhe).
 
 Zusammenfassend lässt sich sagen, dass Systeme mit einer Größe zwischen \SI{50x50}{\nano\meter} und \SI{300x300}{\nano\meter} mit modernen Computerclustern effizient berechenbar sind, wo hingegen kleinere Systeme nicht signifikant von der Effizienzsteigerung profitieren können und für größere Systeme die notwendige Rechenleistung unerreichbar bleibt.
-\todo[inline]{Wort: Speedup}
-\todo[inline]{Wort: Parallelisierbarkeit}
+\todoline{Wort: Speedup}
+\todoline{Wort: Parallelisierbarkeit}
