--- a/md.tex
+++ b/md.tex
@@ -98,14 +98,14 @@ Der Druck innerhalb des Systems wird dabei über die Virialgleichung ermittelt, 
   P V = N k_B T + \frac{1}{d} \sum_{i=1}^N{\vec{r}_i \cdot \vec{F}_i}
 \end{equation}
 
-\todo[inline]{Wenn Zeit bleibt: NPH betrachten}
-\todo[inline]{Wenn Zeit bleibt: Erforschung des Ensembles per Monte Carlo}
+\todoline{Wenn Zeit bleibt: NPH betrachten}
+\todoline{Wenn Zeit bleibt: Erforschung des Ensembles per Monte Carlo}
 
 \subsubsection{Minimierung durch Konjugierte Gradienten (CG-Minimierung)}
 
-\todo[inline]{Hinweis von Jörg: beachte bitte, dass Prof. Hoffmann hier zuhause ist. Tiefergehende Kenntnisse können beim Vortrag nicht schaden}
+\todoline{Hinweis von Jörg: beachte bitte, dass Prof. Hoffmann hier zuhause ist. Tiefergehende Kenntnisse können beim Vortrag nicht schaden}
 
-\todo[inline]{Betrachtung von Minimierungs-Algorithmen, etwa auch thermal annealing}
+\todoline{Betrachtung von Minimierungs-Algorithmen, etwa auch thermal annealing}
 Für die Strukturoptimierung mit molekulardynamischen Methoden werden Algorithmen zur Energieminimierung genutzt, wie die populäre Konjugierte-Gradienten-Methode (CG, Conjugated Gradients), mit denen im Idealfall das globale Minimum der Systemenergie gesucht wird.
 \todo{0K}Bei der CG-Methode wird der Zustandsraum von einem Startzustand $\vec X_0$ aus entlang des Gradienten der Energie $\nabla E(X)$ in Richtung des Minimums abgeschritten, wobei über die Schrittweite $\alpha$ das Konvergenzverhalten beeinflusst werden kann.
 \begin{figure}
@@ -176,5 +176,5 @@ Tabelle~\ref{tab:mdsoftware} stellt ausgewählte Vertreter moderner Molekulardyn
     GROMACS\cite{lindahl_gromacs_2014,berendsen_gromacs:_1995,hess_gromacs_2008} & Uppsala University       & Biomoleküle, quelloffen                                          \\
     \hline
   \end{tabularx}
-  \todo[inline]{Link auf das LAMMPS-Paper}
+  \todoline{Link auf das LAMMPS-Paper}
 \end{table}
