--- a/models.tex
+++ b/models.tex
@@ -2,7 +2,7 @@
 \label{models}
 %% \chapter{ReaxFF-Potentiale für SiO$_2$-Abscheidungen}
 
-\todo[inline]{Kurze Einleitung}
+\todoline{Kurze Einleitung}
 
 \input{present}
 \clearpage
