--- a/present.tex
+++ b/present.tex
@@ -66,7 +66,7 @@ Die untersuchten Systeme setzen allerdings auf schnelle N-Teilchen-Potentiale, d
 Es wurden jedoch keine Off-Lattice-Simulationen amorpher Strukturen gefunden, wie sie häufig durch Gasphasenabscheidungen erzeugt werden.
 
 \subsection{Anwendung von MD-Simulationen für die Gasphasenabscheidung}
-\todo[inline]{Arbeiten von Hermann Wolf und Co.}
+\todoline{Arbeiten von Hermann Wolf und Co.}
 
 Molekulardynamische Simulationen werden seit vielen Jahrzehnten zur Bestimmung struktureller und thermodynamischer Eigenschaften verschiedener Materialien eingesetzt, aber nur selten zur Beschreibung von Gasphasenabscheidungen.
 Sie lassen sich aber zur Beschreibung von Teilaspekten nutzen, wofür meist durch die Simulation periodischer Strukturen Rückschlüsse auf bestimmte Eigenschaften gezogen werden.
@@ -81,7 +81,7 @@ Der durch unterschiedliche Bindungslängen entstehende Versatz zwischen den Kupf
 
 \subsubsection{Silizium}
 Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Einschlägen in Abhängigkeit der Einschlagsenergie.
-\todo[inline]{mehr! PVD und Oxidation / Hydroxylierung von Oberflächen}
+\todoline{mehr! PVD und Oxidation / Hydroxylierung von Oberflächen}
 
 \subsubsection{Aluminiumoxid}
 Für amorphe und kristalline \ce{Al2O3}-Bulksysteme finden sich Simulationsergebnisse von \textsc{Alvarez et al.}\cite{alvarez_computer_1995,alvarez_molecular_1992} und von \textsc{Gutierrez et al.}\cite{gutierrez_molecular_2002} sowie für \ce{Al2O3}-Oberflächen von \textsc{Adiga et al.}\cite{adiga_atomistic_2006}.
