--- a/results.tex
+++ b/results.tex
@@ -1,7 +1,7 @@
 \chapter{Ergebnisse}
 \label{results}
 
-\todo[inline]{viel öfter das Wort ``epitaktisch'' und ``Epitaxie'' fallen lassen?}
+\todoline{viel öfter das Wort ``epitaktisch'' und ``Epitaxie'' fallen lassen?}
 
 Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungssimulationen mit dem Ziel durchgeführt, die Präparation, Durchführung, Möglichkeiten und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
 
