--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -3,7 +3,7 @@
 
 Anhand von Silizium-PVD sollen einerseits amorphe Schichten abgeschieden, andererseits \todo{Nebensatz}zur \ce{SiH4}-\ce{O2}-CVD hingeführt werden.
 Nach Voruntersuchungen verschiedener ReaxFF-Para\-metrisierungen werden Abscheidungen auf kristallinen Silizium-Substraten unterschiedlicher Schnittebenen simuliert.
-\todo[inline]{Einleitung nochmal versuchen}
+\todoline{Einleitung nochmal versuchen}
 
 \subsection{Potentialdateien}
 
@@ -65,7 +65,7 @@ Die Ergebnisse dieser Betrachtungen wurden in Tabelle~\ref{tab:siliconpreresults
       zhang                   & \cmark & ~         & ~           &  ~        & \cmark    & \cmark   & ~            \\
       \hline
     \end{tabularx}
-    \todo[inline]{PVD Ergebnisse -> Anhang}
+    \todoline{PVD Ergebnisse -> Anhang}
 
  %% & CVD\tnote{b}
  %% & CVD
@@ -215,7 +215,7 @@ Somit zeigt sich die ReaxFF-Formulierung erfolgreich in der Darstellung der chem
   \label{fig:siliconunderrelaxedprofile}
 \end{figure}
 
-\todo[inline]{Der Farbgradient der Skalen wird vom Multifunktionsdrucker nicht gedruckt}
+\todoline{Der Farbgradient der Skalen wird vom Multifunktionsdrucker nicht gedruckt}
 
 \todo{Dichte der Schicht?}
 
