--- a/mdmethods.tex
+++ b/mdmethods.tex
@@ -1,18 +1,18 @@
 \section{MD-Simulationen: Methoden und Auswertungen}
 \label{mdmethods}
 
-\todo[inline]{Klar machen, dass das für Präparationen gilt, nicht nur für Parsivald}
+\todoline{Klar machen, dass das für Präparationen gilt, nicht nur für Parsivald}
 
 Nachdem in Abschnitt~\ref{md} die Funktionsweise der Molekulardynamik beschrieben wurde, soll in diesem Abschnitt ein kurzer Überblick über die Vorgehensweisen und Methoden bei der Auswertung von MD-Simulationen gegeben werden, die in den folgenden Kapiteln wiederholt eingesetzt werden.
 Dies beinhaltet sowohl die Simulationsmethoden selbst, wie etwa Relaxierungen von Substraten, Reaktionen und Stabilitätssimulationen von Molekülen, als auch die Auswertung deren Ergebnisse durch externe Werkzeuge.
 
 \subsection{Relaxierungen}
 
-\todo[inline]{hochfrequente Bewegungen dominieren Zeitschrittweite}
+\todoline{hochfrequente Bewegungen dominieren Zeitschrittweite}
 
 Ausgehend von einer präparierten Struktur wird das System auf die Relaxationstemperatur erwärmt, dort im kanonischen Ensemble für die Relaxationsdauer simuliert und bei Bedarf wieder auf eine Zieltemperatur abgekühlt.
 Erwärmung und Abkühlung sind zwar optional, allerdings bei einigen Strukturen zur Reduktion numerischer Fehler notwendig, wie etwa zur Wahrung der Anschlussbedingungen der MD-Simulationen innerhalb von Parsivald.
-\todo[inline]{Anmerkung von Jörg: Das wirft natürlich die Frage auf, ob überhaupt die richtigen (also zur Substrattemperatur passenden) Strukturen gebildet werden, sofern diese temperaturabhängig sind}
+\todoline{Anmerkung von Jörg: Das wirft natürlich die Frage auf, ob überhaupt die richtigen (also zur Substrattemperatur passenden) Strukturen gebildet werden, sofern diese temperaturabhängig sind}
 
 \subsection{Strukturelle Analyse}
 
@@ -22,7 +22,7 @@ Bei Kristallen kann eine Alpha-Form (Abschnitt~\ref{dataalphaform}) mit einem $\
 
 \subsection{Bestimmung der Dichte und Temperatur}
 
-\todo[inline]{Vergleich der Zeiten (Schritt, $\tau$, $t_\text{relax}$, )}
+\todoline{Vergleich der Zeiten (Schritt, $\tau$, $t_\text{relax}$, )}
 
 Zur Bestimmung der Dichte des Blocks eines amorphen Materials stehen verschiedene Möglichkeiten zur Verfügung, die letztendlich alle auf Zählung der Atome innerhalb eines begrenzten Volumens zurückgeführt werden können.
 Da das Volumen des Simulationsraumes im großkanonischen Ensemble durch das Barostat oszilliert, muss sie zeitlich über einen größeren Zeitraum als die Dämpfungskonstante $\tau_p$ gemittelt werden, da sie sonst nicht über die gesamte Periode der Oszillation betrachtet wird.
@@ -40,7 +40,7 @@ Bei amorphen Materialien hingegen konvergiert die Funktion schnell gegen den Gre
 
 Beispiele radialer Verteilungsfunktionen finden sich in Abbildungen~\ref{fig:siliconresults-b},~\ref{fig:kulkarnirdf} und~\ref{fig:amorphousrdf}.
 
-\todo[inline]{Formel zur Berechnung der RDF aus einer Punktwolke}
+\todoline{Formel zur Berechnung der RDF aus einer Punktwolke}
 
 \subsection{Schichtdicke und Oberflächenbeschaffenheit}
 \label{mdmethods-surface}
