--- a/settings.tex
+++ b/settings.tex
@@ -64,10 +64,9 @@
 %threeparttable textwidth
 \renewcommand{\TPTminimum}{\textwidth}
 
-\newcommand{\continuehere}{\todo[inline]{continuehere}{}}
-
 %% avoid the [inline] option of todo
 \newcommand{\todoline}[1]{\todo[inline]{#1}{}}
+\newcommand{\continuehere}{\todoline{continuehere}{}}
 
 %% disable todo
 %% \renewcommand{\todoline}[1]{}
